--- a/src/ZendSample/application/configs/db-config.ini
+++ b/src/ZendSample/application/configs/db-config.ini
@@ -1,9 +1,7 @@
-# 未検証
 [db]
-host = "localhost"
+host = "mysql"
 username = "zend"
 password = "password"
 dbname = "zend_db"
-
 [adapter]
-name = "Mysqli"
+name = "pdo_mysql"
