enable to input Japanese

--- a/php.ini
+++ b/php.ini
@@ -1,11 +1,12 @@
 [Date]
-date.timezone = "Asia/Tokyo"
+date.timezone="Asia/Tokyo"
 [mbstring]
-mbstring.internal_encoding = "UTF-8"
-mbstring.language = "Japanese"
+mbstring.encoding_translation="Off"
+mbstring.internal_encoding="UTF-8"
+mbstring.language="Japanese"
 
 ; UNIX: "/path1:/path2"
-include_path = ".:/var/www/html/ZendSample/library"
+include_path=".:/var/www/html/ZendSample/library"
 
 extension=php_pdo.dll
 extension=php_pdo_mysql.dll
