--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - ./src:/var/www/html
       - ./000-default.conf:/etc/apache2/sites-available/000-default.conf
       - ./php.ini:/usr/local/etc/php/php.ini
+      - ./log:/var/www/html/ZendSample/log
     ports:
       - 8080:80
     tty: true
