change composition of directory

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     build: .
     volumes:
       - ./src:/var/www/html
-      - ./000-default.conf:/etc/apache2/sites-available/000-default.conf
-      - ./php.ini:/usr/local/etc/php/php.ini
+      - ./configs/000-default.conf:/etc/apache2/sites-available/000-default.conf
+      - ./configs/php.ini:/usr/local/etc/php/php.ini
       - ./db/log:/var/www/html/ZendSample/log
     ports:
       - 8080:80
