--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3"
+version: "3.8"
 
 services:
   web:
@@ -11,6 +11,8 @@ services:
       - ./db/log:/var/www/html/todoapp/log
     ports:
       - 8080:80
+    depends_on:
+      - db
     tty: true
   db:
     image: mysql:5.7
